<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ayla.hotelsaas.widget.AppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_tv="编组更多"
        app:left_iv="@drawable/icon_back_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_padding"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/normal_padding"
        android:layout_marginBottom="10dp"
        android:text="@string/group_info"
        android:textColor="#993C3C43"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/secondary_padding"
            android:paddingBottom="@dimen/secondary_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textColor="@color/color_black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/group_more_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_padding"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                android:textColor="#993C3C43"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/icon_down_arrow"
                tools:text="客厅筒灯组" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingTop="@dimen/secondary_padding"
            android:paddingBottom="@dimen/secondary_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_location"
                android:textColor="@color/color_black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/group_more_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_padding"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                android:textColor="#993C3C43"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/icon_down_arrow"
                tools:text="客厅" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/secondary_padding"
            android:paddingBottom="@dimen/secondary_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_device_count"
                android:textColor="@color/color_black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/group_more_device_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_padding"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                android:textColor="#993C3C43"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/icon_down_arrow"
                tools:text="2" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider" />
    </LinearLayout>

    <TextView
        android:id="@+id/group_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="@dimen/secondary_padding"
        android:paddingBottom="@dimen/secondary_padding"
        android:text="@string/group_delete"
        android:textColor="@color/color_danger"
        android:textSize="16sp" />


</LinearLayout>