<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80sp"
            android:layout_marginBottom="51dp"
            android:src="@mipmap/splash_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="top|left"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username_show"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />


            <com.ayla.hotelsaas.widget.BiuEditTextUtils
                android:id="@+id/editCount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/phone_or_email"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:textColor="@color/login_text_percent"
                android:textColorHint="@color/login_text_percent"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/ll_account_layout"
                android:background="@color/login_deviding_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/login_password_show"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <com.ayla.hotelsaas.widget.BiuEditTextUtils
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/ll_account_layout"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/login_text_percent"
                android:textColorHint="@color/login_text_percent"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/ll_password_layout"
                android:background="@color/login_deviding_line" />


            <TextView
                android:id="@+id/tv_error_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="密码或者账号错误"
                android:textColor="@color/login_error_show"
                android:textSize="14sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/submitBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:background="@drawable/green_btn_bg"
                android:text="@string/login_btn"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_content_view"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="18dp"
        android:padding="@dimen/dp_10"
        android:text="注册账号"
        android:textColor="@color/color_999999"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_content_view"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="18dp"
        android:layout_marginRight="@dimen/dp_40"
        android:padding="@dimen/dp_10"
        android:text="忘记密码？"
        android:textColor="@color/loginLogoColor"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>