<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.ayla.hotelsaas.widget.AppBar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_tv="@string/exit"
        app:left_tv="返回登录"
        app:left_iv="@mipmap/icon_back_black" />

    <LinearLayout
        android:id="@+id/ll_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="82dp"
            android:text="@string/register_tv_show"
            android:textColor="@color/loginLogoColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username_show"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12" />


            <com.ayla.hotelsaas.widget.BiuEditTextUtils
                android:id="@+id/registeraccount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_40"
                android:background="@null"
                android:gravity="center"
                android:hint="填写邮箱或手机号"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:textColor="@color/login_text_percent"
                android:textColorHint="@color/login_text_percent"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/ll_account_layout"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="38dp"
                android:background="@color/login_deviding_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/login_password_show"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12" />

            <com.ayla.hotelsaas.widget.BiuEditTextUtils
                android:id="@+id/registerPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/ll_account_layout"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:background="@null"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:hint="填写密码"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/login_text_percent"
                android:textColorHint="@color/login_text_percent"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/ll_password_layout"
                android:layout_marginLeft="38dp"
                android:layout_marginRight="38dp"
                android:background="@color/login_deviding_line" />

            <TextView
                android:id="@+id/tv_error_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="注册账号和密码错误"
                android:textColor="@color/login_error_show"
                android:textSize="14sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/register_submitBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/green_btn_bg"
                android:text="@string/register_btn"
                android:enabled="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_also_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:text="已有账号"
        android:layout_below="@+id/ll_content_view"
        android:textColor="@color/loginLogoColor"
        android:textSize="14sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignBaseline="@+id/tv_also_account"
        android:layout_toRightOf="@+id/tv_also_account"
        android:layout_gravity="center"
        android:text="->"
        android:textColor="@color/loginLogoColor"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>